--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,6 +1,6 @@
 <div class="social">
   <ul class="social-links">
-    {{ if .Public.Params.Social.Github }}
+    {{ if .Site.Params.Social.Github }}
       <li><a href="https://github.com/{{ .Site.Params.Social.Github }}"><i class="fa fa-github"></i></a></li>
     {{ end }}
 
