--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,10 +9,10 @@
         </div>
         <h3>I'm <strong>{{ .Site.Params.author }}</strong>, a Software Engineer.</h3>
         <h3>I love Science, Technology, Programming & Writing</h3>
-        <h3>Have a look at some of my <a href="{{ .Site.BaseURL }}workbench/"> works</a>.</h3>
+        <!-- <h3>Have a look at some of my <a href="{{ .Site.BaseURL }}workbench/"> works</a>.</h3> -->
         <h3>For more check out my academic &amp; professional <a href="{{ .Site.BaseURL }}resume/">resume</a>.</h3>
         <h3>Contact me at <a href="http://twitter.com/{{ .Site.Params.Social.Twitter }}">@{{ .Site.Params.Social.Twitter }}</a> or by <a href="mailto:{{ .Site.Params.Social.Email }}">email</a>.</h3>
-        {{ partial "social.html" . }}
+        {{ partial "social" . }}
         </div>
       </section>
     </div>
