tribute to Shrikant

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,6 +15,9 @@
         {{ partial "social" . }}
         </div>
       </section>
+      <p style="font:8px">
+        A million thanks & <span style="color:red">&hearts;</span> to my <i>friend, mentor</i> <a href="https://sharats.me">Shrikant Sharat Kandula</a>!
+      </p>
     </div>
     {{ partial "footer" . }}
   </body>
