--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
         {{ partial "social" . }}
         </div>
       </section>
-      <p style="font:8px">
+      <p style="font:8px;text-align: center">
         A million thanks & <span style="color:red">&hearts;</span> to my <i>friend, mentor</i> <a href="https://sharats.me">Shrikant Sharat Kandula</a>!
       </p>
     </div>
