modidfications to the appearance of shrikant's line

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
         </div>
       </section>
       <p style="font:8px;text-align: center">
-        A million thanks & <span style="color:red">&hearts;</span> to my <i>friend, mentor</i> <a href="https://sharats.me">Shrikant Sharat Kandula</a>!
+        A million thanks & <span style="color:red">&hearts;</span> to my <b>friend, mentor &nbsp;</b> <a href="https://sharats.me" style="cursor: pointer">Shrikant Sharat Kandula</a>!
       </p>
     </div>
     {{ partial "footer" . }}
