--- a/static/styles.css
+++ b/static/styles.css
@@ -3,8 +3,8 @@
 }
 
 html {
-	--body-text-color: #222;
-	--link-color: #06A;
+	--body-text-color: #FFF;
+	--link-color: #FFF400;
 	--font-body: 'Fira Sans', sans-serif;
 	--font-head: 'Fira Sans', serif;
 	--font-mono: 'Fira Mono', monospace;
@@ -16,13 +16,13 @@ html, body {
 }
 
 body {
-	background: #FCFCFC;
+	background: #080118;
 	color: var(--body-text-color);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	font-family: var(--font-body);
-	font-size: 16px;
+	font-size: 12px;
 }
 
 table {
@@ -43,27 +43,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	font-size: 2.2em;
-}
-
-h2 {
-	font-size: 2em;
-}
-
-h3 {
 	font-size: 1.8em;
 }
 
+h2 {
+	font-size: 1.5em;
+}
+
+h3 {
+	font-size: 1.2em;
+}
+
 h4 {
-	font-size: 1.6px;
+	font-size: 1em;
 }
 
 h5 {
-	font-size: 1.4em;
+	font-size: 0.9em;
 }
 
 h6 {
-	font-size: 1.2em;
+	font-size: 0.8em;
 }
 
 time {
