--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-default">
-  <div class="container" style="background-color: black;color: antiquewhite;">
+<nav class="navbar navbar-default" style="background-color: black;color: antiquewhite;">
+  <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="{{ .Site.BaseURL }}"><i class="fa fa-home"></i></a>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
