modified single.html and added python_builtins.md

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -26,6 +26,9 @@
           <div class="panel-body">
             <div class="blogpost">
               {{ .Content }}
+              <aside>
+                  {{ .TableOfContents }}
+              </aside>
               <hr>
               <div class="related-posts">
                 <h5>Related Posts</h5>
