--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,9 +25,9 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="blogpost">
-              <!-- <aside> -->
+              <!-- <aside>
                 {{ .TableOfContents }}
-              <!-- </aside> -->
+              </aside> -->
               {{ .Content }}
               <hr>
               <div class="related-posts">
