--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,8 +2,8 @@
 html,
 body {
 	height: 100%;
-	background-color: #000;
-	font-family: "Source Sans Pro", sans-serif;
+	background-color: #fff;
+	font-family: "Helvetica", "Source Sans Pro", sans-serif;
 	/* The html and body elements cannot have any padding or margin. */
 	border-top: 3px solid #000;
 }
