--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,7 @@ html,
 body {
 	height: 100%;
 	background-color: #fff;
-	font-family: "Helvetica", "Source Sans Pro", sans-serif;
+	font-family: "Calibri", "Helvetica", "Source Sans Pro", sans-serif;
 	/* The html and body elements cannot have any padding or margin. */
 	border-top: 3px solid #000;
 }
