--- a/static/css/main.css
+++ b/static/css/main.css
@@ -33,28 +33,28 @@ body {
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-	color: #6b6b6b;
+	color: #391282;
 }
 .navbar-default .navbar-text {
-	color: #6b6b6b;
+	color: #391282;
 }
 .navbar-default .navbar-nav > li > a {
-	color: #6b6b6b;
+	color: #391282;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-	color: #6b6b6b;
+	color: #391282;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-	color: #6b6b6b;
+	color: #391282;
 	background-color: #ffffff;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-	color: #6b6b6b;
+	color: #391282;
 	background-color: #ffffff;
 }
 .navbar-default .navbar-toggle {
@@ -65,30 +65,30 @@ body {
 	background-color: #ffffff;
 }
 .navbar-default .navbar-toggle .icon-bar {
-	background-color: #6b6b6b;
+	background-color: #391282;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-	border-color: #6b6b6b;
+	border-color: #391282;
 }
 .navbar-default .navbar-link {
-	color: #6b6b6b;
+	color: #391282;
 }
 .navbar-default .navbar-link:hover {
-	color: #6b6b6b;
+	color: #391282;
 }
 @media (max-width: 767px) {
 	.navbar-default .navbar-nav .open .dropdown-menu > li > a {
-		color: #6b6b6b;
+		color: #391282;
 	}
 	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
 	.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-		color: #6b6b6b;
+		color: #391282;
 	}
 	.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
 	.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
 	.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-		color: #6b6b6b;
+		color: #391282;
 		background-color: #ffffff;
 	}
 }
@@ -201,7 +201,7 @@ h5 a:hover {
 	text-decoration: none !important;
 }
 .text-muted {
-	color: #6b6b6b;
+	color: #391282;
 }
 div.footer {
 	border-bottom: 5px solid #27a822;
