--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{{ .Site.BaseURL }}"><i class="fa fa-home"></i></a>
+      <!-- <a class="navbar-brand" href="{{ .Site.BaseURL }}"><i class="fa fa-home"></i></a> -->
+      <a class="navbar-brand" href="{{ .Site.BaseURL }}">Gautham Kolluru's</a>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -10,11 +11,11 @@
     </div>
     <div class="navbar-collapse collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
-      {{ if .Site.Menus.main }}
+        {{ if .Site.Menus.main }}
         {{ range sort .Site.Menus.main }}
         <li><a href="{{ .URL }}">{{ .Name | upper }}</a></li>
         {{ end }}
-      {{ end }}
+        {{ end }}
       </ul>
     </div>
   </div>
