--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,11 @@
 <nav class="navbar navbar-default">
   <div class="container">
+    <div>
+      <p><i>Gautham's</i></p>
+    </div>
     <div class="navbar-header">
       <!-- <a class="navbar-brand" href="{{ .Site.BaseURL }}"><i class="fa fa-home"></i></a> -->
-      <a class="navbar-brand" href="{{ .Site.BaseURL }}">Gautham Kolluru's</a>
+      <a class="navbar-brand" href="{{ .Site.BaseURL }}">Home</a>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
