--- a/static/css/main.css
+++ b/static/css/main.css
@@ -103,11 +103,17 @@ body {
 	margin: 20px 0;
 }
 .container a {
+	color: #4169e1;
+}
+.container a:hover {
+	color: #4169e1;
+}
+/* .container a {
 	color: #27a822;
 }
 .container a:hover {
 	color: #267723;
-}
+} */
 .container p img,
 .img-responsive {
 	display: block;
@@ -130,11 +136,11 @@ body {
 }
 .panel-default h4 a,
 h5 a {
-	color: #27a822;
+	color: #4169e1;
 }
 .panel-default h4 a:hover,
 h5 a:hover {
-	color: #267723;
+	color: #4169e1;
 }
 .panel {
 	border-style: none;
@@ -201,10 +207,10 @@ h5 a:hover {
 	text-decoration: none !important;
 }
 .text-muted {
-	color: #391282;
+	color: #000000;
 }
 div.footer {
-	border-bottom: 5px solid #27a822;
+	border-bottom: 5px solid #4169e1;
 }
 /* Set the fixed height of the footer here */
 /*.footer {
